# RKNN_Yolov8_Infer

./: .gitignore  CMakeLists.txt  README.md  dataset.yaml  install_onnxruntime.sh  requirements.txt
include/: yolov8_detector.h
reference/: README.md  yolov8_circle.py
src/: main.cc  yolov8_detector.cc
